src/objects/Visitor_Register__c.object
<CustomObject>
    <description>Used to collect information on ExAM Assessment participants. Enables analysis against visitors and participants in ExAM data collections.</description>
    <fields>
        <fullName>Assignment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Manager</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Visitor Register</relationshipLabel>
        <relationshipName>Visitor_Register</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authenticating_Official__c</fullName>
        <label>Authenticating Official</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_No__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Badge No.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Date_and_TimeIN__c</fullName>
        <label>Date and Time-IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_Out__c</fullName>
        <label>Date and Time-Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Place_Visiting__c</fullName>
        <inlineHelpText>Administrative is Teacher Conference etc
Commercial is Plumber, Cafeteria vendors
Pickup kids
Select Other for any other reasons</inlineHelpText>
        <label>Reason for Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Public Assessment</label>
        <referenceTo>Public_Assessment__c</referenceTo>
        <relationshipLabel>Visitor Register</relationshipLabel>
        <relationshipName>Visitor_Register</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Template</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Visitor Register</relationshipLabel>
        <relationshipName>Visitor_Register</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitor_Last_Name__c</fullName>
        <label>Visitor Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <label>Visitor First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Visitor Register</label>
    <nameField>
        <label>Visitor Register Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitor Register</pluralLabel>
    <recordTypes>
        <fullName>Public_Assessment</fullName>
        <active>true</active>
        <label>Public Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMS_Survey</fullName>
        <active>true</active>
        <label>SMS Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>